create-point js added

--- a/create-point.html
+++ b/create-point.html
@@ -62,6 +62,7 @@
                             <select name="city" disabled>
                                 <option value="">Selecione a cidade</option>
                             </select>  
+                            <input type="hidden" name="state">
                     </div>
 
                     </fieldset>
@@ -77,5 +78,6 @@
 
     </div>
 
+    <script src="/scripts/create-point.js"></script>
 </body>
 </html>
